# babel

./: CMakeLists.txt  README.md  conanfile.txt
client/: ressources.qrc
client/include/: Audio.hpp  Compressor.hpp  ISound.hpp  babelfriend.h  client.h  login.h  mainwindow.h  tcpNetwork.h  udpNetwork.h
client/src/: Audio.cpp  Compressor.cpp  babelfriend.cpp  client.cpp  login.cpp  main.cpp  mainwindow.cpp  tcpNetwork.cpp  udpNetwork.cpp
client/ui/: babelfriend.ui  login.ui  mainwindow.ui
doc/: Documentation Serveur Babel.docx
include/: Parser.hpp  Server.hpp  User.hpp  account.hpp  db.hpp  exception.hpp  session.hpp
src/: Parser.cpp  db.cpp  main.cpp  server.cpp  session.cpp
